--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "G1_keter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "htmlspecialchars": "^1.0.5",
+    "mysql2": "^3.13.0",
+    "slashes": "^2.0.0"
+  }
 }
